fix to blogger clipping path

--- a/static/css/partials/_card-opinion.scss
+++ b/static/css/partials/_card-opinion.scss
@@ -72,7 +72,8 @@
 
     &.final {
         a.card {
-            clip-path: polygon(30px 0px, 100% 0px, 100% calc(100% - 60px), calc(100% - 30px) calc(100% - 30px), 30px calc(100% - 30px), 0px 100%, 0px 30px);
+            -webkit-clip-path: polygon(40px 0px, 100% 0px, 100% calc(100% - 80px), calc(100% - 40px) calc(100% - 40px), 40px calc(100% - 40px), 0px 100%, 0px 40px);
+            clip-path: polygon(40px 0px, 100% 0px, 100% calc(100% - 80px), calc(100% - 40px) calc(100% - 40px), 40px calc(100% - 40px), 0px 100%, 0px 40px);
 
             padding:0px 42px;
 
