--- a/static/css/partials/_common.scss
+++ b/static/css/partials/_common.scss
@@ -216,8 +216,8 @@ hr.divide10 {
 div.bloggerImg {
     position:relative;
     background: color(red); /* fallback */
-    -webkit-clip-path: polygon(15% 0%, 100% 0%, 100% 20%, 100% 77%, 85% 100%, 0% 100%, 0% 100%, 0% 25%);
-    clip-path: polygon(15% 0%, 100% 0%, 100% 20%, 100% 77%, 85% 100%, 0% 100%, 0% 100%, 0% 25%);
+    -webkit-clip-path: polygon(40px 0px, 100% 0px, 100% calc(100% - 40px), calc(100% - 40px) 100%, 0px 100%, 0px 40px);
+    clip-path: polygon(40px 0px, 100% 0px, 100% calc(100% - 40px), calc(100% - 40px) 100%, 0px 100%, 0px 40px);
 }
 
 
